@startuml
skinparam classAttributeIconSize 0
skinparam backgroundColor #FEFEFE
title Argentum MALT — Arquitectura del Servidor (clases principales)

note as N1
  Enfocado en la capa de infraestructura de red
  y lógica de juego (Socket, Protocol, Game).
  Para el detalle de threading (Acceptor, Sender,
  Receiver y límites de cada hilo), ver
  server_threads_architecture.puml.
end note

' ============================================================
' Interfaces / Abstract
' ============================================================
abstract class Runnable {
  + {abstract} start()
  + {abstract} join()
  + {abstract} stop()
  + {abstract} is_alive()
}

class Thread {
  # std::atomic<bool> _keep_running
  # std::atomic<bool> _is_alive
  - std::thread thread
  + {abstract} run()
  + start()
  + join()
  + stop()
  + is_alive()
}
Runnable <|-- Thread : <<extends>>

' ============================================================
' Common / Infraestructura
' ============================================================
class Socket {
  - int skt
  - bool closed
  - std::atomic<int> stream_status
  + Socket(hostname, servname)
  + Socket(servname)
  + static from_fd(fd)
  + sendsome(data, sz)
  + recvsome(data, sz)
  + sendall(data, sz)
  + recvall(data, sz)
  + accept()
  + shutdown(how)
  + shutdown_from_other_thread(how)
  + is_stream_send_closed()
  + is_stream_recv_closed()
  + close()
}

class Protocol {
  - Socket& skt
  + Protocol(Socket&)
  + send_uint8(value)
  + recv_uint8()
  + send_uint16(value)
  + recv_uint16()
  + send_uint32(value)
  + recv_uint32()
  + send_str(message)
  + recv_str()
  + send_opcode(opcode)
  + recv_opcode()
  + send_bool(value)
  + recv_bool()
}

class ServerProtocol {
  - Socket skt
  - Protocol protocol
  + ServerProtocol(Socket&&)
  + send_login_ok(ev)
  + send_login_error(ev)
  + send_character_created(ev)
  + send_player_stats(ev)
  + send_entity_spawn(ev)
  + send_entity_despawn(ev)
  + send_entity_move(ev)
  + send_damage_dealt(ev)
  + send_damage_received(ev)
  + send_entity_died(ev)
  + send_event(ev)
  + recv_command()
  + shutdown_from_other_thread()
  - recv_login()
  - recv_move()
  - recv_attack()
  - recv_send_chat_msg()
  - recv_change_map()
  - recv_cast_spell()
  - recv_equip_item()
  - recv_unequip_item()
  - recv_npc_buy()
  - recv_npc_sell()
  - recv_bank_deposit()
  - recv_bank_withdraw()
  - recv_drop_item()
  - recv_pickup_item()
}
Protocol o-- ServerProtocol : <<compone>>
Socket *-- ServerProtocol : <<dueño>>

' ============================================================
' Queue template
' ============================================================
class Queue<T> {
  - queue<T> q
  - mutex mtx
  - condition_variable is_not_empty
  - condition_variable is_not_full
  + push(val)
  + pop()
  + try_push(val)
  + try_pop(val)
  + close()
}
note right of Queue
  Template MPMC bloqueante.
  Usos concretos:
  Queue<PlayerCommand>
  Queue<ServerEvent>
end note

struct PlayerCommand {
  + uint16_t player_id
  + ClientCommand cmd
}

class ClientCommand {
  <<variant>>
  ~ LoginCmd, MoveCmd, AttackCmd, ...
  ~ CastSpellCmd, EquipItemCmd, ...
  ~ Clan*Cmd, Cheat*Cmd, ...
}

class ServerEvent {
  <<variant>>
  ~ LoginOkEvent, EntitySpawnEvent, ...
  ~ DamageDealtEvent, ChatMsgEvent, ...
}

' ============================================================
' Hilos: GameLoop
' ============================================================
class GameLoop {
  - int tick_rate_hz
  - int save_interval_ticks
  - Game game
  - Queue<PlayerCommand>& input_queue
  - ClientListMonitor& monitor
  + GameLoop(config, input_queue, monitor, ...)
  + run()
}
Thread <|-- GameLoop : <<extends>>

' ============================================================
' Core: Game
' ============================================================
class Game {
  - map<uint16_t, Player> players
  - map<uint16_t, EnemyNpc> enemy_npcs
  - ClanManager clan_manager
  - map<string, Map> maps
  - CombatController combat_controller
  - BankService bank_service
  - MerchantService merchant_service
  - SpawnService spawn_service
  - GroundItemService ground_item_service
  - MapTransitionService map_transition_service
  - PlayerSessionService player_session_service
  - CheatService cheat_service
  + Game(config, player_data_service, clan_persistence)
  + process_command(player_id, cmd)
  + remove_player(player_id)
  + tick()
  + save_all_players()
  - handle_move(player_id, cmd)
  - handle_attack(player_id, cmd)
  - handle_send_chat_msg(player_id, cmd)
  - handle_resurrect(player_id)
  - handle_meditate(player_id)
  - handle_equip(player_id, cmd)
  - handle_unequip(player_id, cmd)
  - handle_npc_heal(player_id)
}

struct CommandResult {
  + vector<ServerEvent> private_events
  + vector<ServerEvent> broadcast_events
  + map<uint16_t, vector<ServerEvent>> targeted_events
  + vector<ServerEvent> map_events
  + map<string, vector<ItemDroppedEvent>> ground_drops
  + merge(other)
}

Game ..> CommandResult : <<produce>>

' ============================================================
' Network por cliente
' ============================================================
class ClientHandler {
  - uint16_t player_id
  - ServerProtocol protocol
  - Queue<ServerEvent> output_queue
  - Sender sender
  - Receiver receiver
  + ClientHandler(player_id, socket, input_queue)
  + start()
  + push_event(ev)
  + stop()
  + join()
  + is_alive()
}
note right of ClientHandler
  Un ClientHandler por cada
  cliente conectado.
  Creado por Acceptor,
  registrado en ClientListMonitor.
  (Sender/Receiver detallados en
  server_threads_architecture.puml)
end note

' ============================================================
' Monitor de clientes
' ============================================================
class ClientListMonitor {
  - mutex mtx
  - map<uint16_t, unique_ptr<ClientHandler>> clients
  - uint16_t next_id
  + add(socket, input_queue)
  + push_event(player_id, event)
  + broadcast(event)
  + clean_dead()
  + stop_all()
  + is_empty()
}
ClientListMonitor o-- ClientHandler : <<contiene>>

' ============================================================
' Top-level: Server
' ============================================================
class Server {
  - ServerConfig config
  - Socket listener
  - Queue<PlayerCommand> input_queue
  - ClientListMonitor monitor
  - PlayerDataService player_data_service
  - ClanPersistence clan_persistence
  - Acceptor acceptor
  - GameLoop game_loop
  + Server(config)
  + run()
  - stop()
}
Server *-- GameLoop : <<dueño>>
Server *-- ClientListMonitor : <<dueño>>

' ============================================================
' Relaciones
' ============================================================

' Socket connections
Socket --* ServerProtocol : 1 skt (dueña)
Socket <-- Protocol : &skt (referencia)

' Queue sharing
"Queue<PlayerCommand>" <-- Server : propietaria
"Queue<PlayerCommand>" <-- GameLoop : &input_queue

"Queue<ServerEvent>" <-- ClientHandler : propietaria

' Monitor connections
ClientListMonitor <-- Server : propietaria
ClientListMonitor <-- GameLoop : &monitor

' Events flow
GameLoop ..> CommandResult : <<procesa tick/command>>
CommandResult ..> ClientListMonitor : push_event(), broadcast()

@enduml
